--- a/src/html/interviews/intrvw_b_l02.html
+++ b/src/html/interviews/intrvw_b_l02.html
@@ -7,7 +7,7 @@
                 title: "Heimat hin oder her",
                 main: [
                     `Mit allem, was wir erlebt [haben], aber wir wollten am Ende trotzdem alle hier in Deutschland bleiben. Das heißt mit anderen Worten, gibt genug gute Leute. Wir haben es gut hier eigentlich … trotz allem … Ich meine, weil wir wahrscheinlich nicht wirklich direkt erlebt, konfrontiert, attackiert von solcher Gruppe. Da kann man wahrscheinlich von Glück reden, aber wenn du das einmal erlebst, weiß ich nicht … aber sonst kann ich nicht groß Schlechtes sagen, mir geht es wirklich gut, ich habe Glück gehabt. Wie gesagt, ich habe meine zweite Heimat. Heimat hin oder her, meine Heimat ist dort, wo meine Kinder sind. Mein Zuhause ist dort bin ich geboren, und ich hier bin ich auch gut aufgehoben, ist meine zweite Heimat. Und das ist alles gut.`,
-                    `Ich bin auch jetzt glücklich, also ich habe manchmal gedacht, du hast richtig gemacht, dass du hier geblieben bist. Also damals ist ja noch verzweifelt und das Ziel habe ich erreicht. Meine Tochter ist jetzt Ärztin und die andere arbeitet in Steuerberaterkanzlei. Ich habe mein Ziel erreicht.`,
+                    `<span class="italic">Ich bin auch jetzt glücklich, also ich habe manchmal gedacht, du hast richtig gemacht, dass du hier geblieben bist. Also damals ist ja noch verzweifelt und das Ziel habe ich erreicht. Meine Tochter ist jetzt Ärztin und die andere arbeitet in Steuerberaterkanzlei. Ich habe mein Ziel erreicht.</span>`,
                 ],
                 author: "Lam Goltzsch",
                 authorLink: "../bio.html#gotsch",
