--- a/src/html/virtual-exhibits/ve4.html
+++ b/src/html/virtual-exhibits/ve4.html
@@ -37,7 +37,7 @@
                         <!-- Audio "die ganze Struktur zerbrach" -->
                         <include
                             src="./partials/interview_audio.html"
-                            locals='{"id": "a_d04", "author": "", "audioFilePath": "../../../public/audio/A_D_04.mp3", "title": "die ganze Struktur zerbrach"}'
+                            locals='{"id": "a_d04", "author": "", "enableTranscript": "true",  "audioFilePath": "../../../public/audio/A_D_04.mp3", "title": "die ganze Struktur zerbrach"}'
                         >
                         </include>
                     </div>
@@ -51,7 +51,7 @@
                             <div class="h-fit md:absolute md:top-1/2 md:w-1/2 md:-translate-y-1/2">
                                 <include
                                     src="./partials/interview_audio.html"
-                                    locals='{"id": "a_d05", "author": "", "audioFilePath": "../../../public/audio/A_D_05.mp3", "title": "das nahm ja so Überhand"}'
+                                    locals='{"id": "a_d05", "author": "", "enableTranscript": "true", "audioFilePath": "../../../public/audio/A_D_05.mp3", "title": "das nahm ja so Überhand"}'
                                 >
                                 </include>
                             </div>
@@ -59,7 +59,7 @@
                     </div>
 
                     <!-- Plattenbau-->
-                    <div class="z-10 order-1 mx-auto aspect-2/3 w-4/5 overflow-hidden object-cover md:order-2 md:mx-0">
+                    <div class="order-1 mx-auto aspect-2/3 w-4/5 overflow-hidden object-cover md:order-2 md:mx-0">
                         <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_024.jpg" />
                     </div>
                 </div>
@@ -80,7 +80,7 @@
                         >
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"id": "dm02", "author": "", "audioFilePath": "../../../public/audio/DM_02.mp3", "title": "Besuch bekommen"}'
+                                locals='{"id": "dm02", "author": "", "enableTranscript": "true", "audioFilePath": "../../../public/audio/DM_02.mp3", "title": "Besuch bekommen"}'
                             >
                             </include>
                         </div>
@@ -145,7 +145,7 @@
                         <div class="mx-auto w-3/5 -translate-y-1/2 md:absolute md:left-1/2 md:mx-0 md:w-5/6 md:-translate-x-1/2">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"id": "a_d06", "author": "", "audioFilePath": "../../../public/audio/A_D_06.mp3", "title": "das wollten wir doch nicht"}'
+                                locals='{"id": "a_d06", "author": "", "enableTranscript": "true", "audioFilePath": "../../../public/audio/A_D_06.mp3", "title": "das wollten wir doch nicht"}'
                             >
                             </include>
                         </div>
@@ -175,7 +175,7 @@
                             >
                                 <include
                                     src="./partials/interview_audio.html"
-                                    locals='{"id": "", "author": "", "audioFilePath": "../../../public/audio/A_D_08.mp3", "title": ""}'
+                                    locals='{"id": "a_d08", "author": "", "enableTranscript": "true", "audioFilePath": "../../../public/audio/A_D_08.mp3", "title": ""}'
                                 >
                                 </include>
                             </div>
@@ -207,7 +207,7 @@
                         <div class="mx-auto w-3/5 md:absolute md:bottom-0 md:right-0 md:mx-0 md:w-4/5 md:translate-x-[15%]">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"id": "jr02", "author": "", "audioFilePath": "../../../public/audio/J_R_02.mp3", "title": "es gab keine Grenze"}'
+                                locals='{"id": "jr02", "author": "", "enableTranscript": "true", "audioFilePath": "../../../public/audio/J_R_02.mp3", "title": "es gab keine Grenze"}'
                             >
                             </include>
                         </div>
