--- a/src/html/virtual-exhibits/ve5.html
+++ b/src/html/virtual-exhibits/ve5.html
@@ -39,7 +39,7 @@
                     >
                         <include
                             src="./partials/interview_audio.html"
-                            locals='{"id": "dm01", "author": "", "audioFilePath": "../../../public/audio/DM_01.mp3", "title": "wie ein Theater beobachtet"}'
+                            locals='{"id": "dm01", "author": "", "enableTranscript": "true", "audioFilePath": "../../../public/audio/DM_01.mp3", "title": "wie ein Theater beobachtet"}'
                         >
                         </include>
                     </div>
@@ -88,7 +88,7 @@
                     <div class="flex flex-col">
                         <div class="flex justify-center md:flex-row md:justify-end">
                             <!-- Bushaltestelle-->
-                            <div class="relative z-50 aspect-3/2 w-3/4 md:w-1/2">
+                            <div class="relative aspect-3/2 w-3/4 md:w-1/2">
                                 <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_054.jpg" />
                             </div>
                         </div>
@@ -99,12 +99,12 @@
                                 <div class="z-40 mx-auto w-2/5 md:w-1/4 md:translate-y-1/2">
                                     <include
                                         src="./partials/interview_audio.html"
-                                        locals='{"id": "", "author": "", "audioFilePath": "../../../public/audio/MM_02.mp3", "title": ""}'
+                                        locals='{"id": "mm02", "author": "", "enableTranscript": "true", "audioFilePath": "../../../public/audio/MM_02.mp3", "title": ""}'
                                     >
                                     </include>
                                 </div>
                                 <!-- Gemüse-->
-                                <div class="relative aspect-3/2 w-3/4 -translate-y-[15%] md:w-full md:-translate-y-0">
+                                <div class="relative z-0 aspect-3/2 w-3/4 -translate-y-[15%] md:w-full md:-translate-y-0">
                                     <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_055.jpg" />
                                 </div>
                             </div>
@@ -116,7 +116,7 @@
                                 <div class="mx-auto w-full">
                                     <include
                                         src="./partials/interview_audio.html"
-                                        locals='{"id": "ks01", "author": "", "audioFilePath": "../../../public/audio/KS_01.mp3", "title": "für mich war das ein Unfall"}'
+                                        locals='{"id": "ks01", "author": "", "enableTranscript": "true", "audioFilePath": "../../../public/audio/KS_01.mp3", "title": "für mich war das ein Unfall"}'
                                     >
                                     </include>
                                 </div>
@@ -127,12 +127,12 @@
 
                 <div class="h-fit w-full md:-mt-[10%]">
                     <div class="flex flex-col-reverse items-center justify-between pt-8 md:flex-row md:items-end md:pt-0">
-                        <div class="w-full md:w-1/2">
+                        <div class="z-10 w-full md:w-1/2">
                             <!-- Audio "Hoyerswerda hat den Anfang gemacht" -->
                             <div class="mx-auto w-2/3 pt-12 md:mr-[100%] md:w-4/5 md:-translate-y-full md:pt-0">
                                 <include
                                     src="./partials/interview_audio.html"
-                                    locals='{"id": "jr03", "author": "", "audioFilePath": "../../../public/audio/J_R_03.mp3", "title": "Hoyerswerda hat den Anfang gemacht"}'
+                                    locals='{"id": "jr03", "author": "", "enableTranscript": "true", "audioFilePath": "../../../public/audio/J_R_03.mp3", "title": "Hoyerswerda hat den Anfang gemacht"}'
                                 >
                                 </include>
                             </div>
@@ -162,7 +162,7 @@
                         <div class="mx-auto w-4/5 md:-translate-y-1/2">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"id": "b_l02", "author": "", "audioFilePath": "../../../public/audio/B_L_02.mp3", "title": "Heimat hin oder her"}'
+                                locals='{"id": "b_l02", "author": "", "enableTranscript": "true", "audioFilePath": "../../../public/audio/B_L_02.mp3", "title": "Heimat hin oder her"}'
                             >
                             </include>
                         </div>
@@ -182,7 +182,7 @@
                         <div class="mx-auto w-1/2 pt-8 md:pt-0">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"id": "", "author": "", "audioFilePath": "../../../public/audio/MM_03.mp3", "title": ""}'
+                                locals='{"id": "mm03", "author": "", "enableTranscript": "true", "audioFilePath": "../../../public/audio/MM_03.mp3", "title": ""}'
                             >
                             </include>
                         </div>
@@ -192,12 +192,12 @@
                 <div
                     class="flex h-fit flex-col items-center justify-between pt-8 md:z-0 md:-translate-y-[15%] md:flex-row md:items-end md:pt-0"
                 >
-                    <div class="order-2 w-full pt-8 md:order-none md:w-2/5 md:pt-0">
+                    <div class="z-10 order-2 w-full pt-8 md:order-none md:w-2/5 md:pt-0">
                         <!-- Audio "ich war ein richtiger Sklave" -->
                         <div class="mx-auto w-3/5 pt-8 md:mr-auto md:w-4/5 md:-translate-y-[250%] md:pt-0">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"id": "dm04", "author": "", "audioFilePath": "../../../public/audio/DM_04.mp3", "title": "ich war ein richtiger Sklave"}'
+                                locals='{"id": "dm04", "author": "", "enableTranscript": "true", "audioFilePath": "../../../public/audio/DM_04.mp3", "title": "ich war ein richtiger Sklave"}'
                             >
                             </include>
                         </div>
