replaced image ks_01, converted other png's to jpg

--- a/src/html/interviews/intrvw_jr02.html
+++ b/src/html/interviews/intrvw_jr02.html
@@ -14,7 +14,7 @@
                 author: "Jan K. und René K.",
                 authorLink: "../bio.html#jankrenek",
                 audioFilePath: "/public/audio/J_R_02.mp3",
-                imageFilePath: "/public/images/J_R_02.png",
+                imageFilePath: "/public/images/J_R_02.jpg",
                 imageCaption: 'Filmstill aus "The Truth Lies in Rostock/Spectacle"',
                 additionalContext: "",
                 prevLink: "intrvw_a_d08.html",
