--- a/src/html/interviews/intrvw_ls01.html
+++ b/src/html/interviews/intrvw_ls01.html
@@ -12,7 +12,7 @@
                 author: "Lan und Huu Loi Bin Seifert",
                 authorLink: "../bio.html#seifert",
                 audioFilePath: "/public/audio/LS_01.mp3",
-                imageFilePath: "/public/images/LS_01.png",
+                imageFilePath: "/public/images/LS_01.jpg",
                 imageCaption: 'Filmstill aus "The Truth Lies in Rostock"/Spectacle',
                 additionalContext:
                     "August 1992: In Rostock-Lichtenhagen wurden das Wohnheim ehemaliger vietnamesischer Vertragsarbeiter:innen und die „Zentrale Aufnahmestelle für Asylbewerber“ angegriffen. Steine und Molotow-Cocktails flogen gegen die Gebäude und auf die Menschen in ihnen. An diesem Pogrom beteiligten sich mehrere hundert Neonazis und bis zu 3.000 applaudierende Zuschauer:innen.",
