image caption changed

--- a/src/html/interviews/intrvw_ks01.html
+++ b/src/html/interviews/intrvw_ks01.html
@@ -15,7 +15,8 @@
                 authorLink: "../bio.html#kordulas",
                 audioFilePath: "/public/audio/KS_01.mp3",
                 imageFilePath: "/public/images/KS_01.jpg",
-                imageCaption: "Eberswalde, 90er Jahre. Aus dem Archiv von Augusto Jone Munjunga",
+                imageCaption:
+                    "Eberswalde, 1990. Filmstill aus Bestandaufnahme Eberswalde, Oktober 1990/Institut für Forstwissenschaften Eberswalde",
                 additionalContext:
                     "Amadeu Antonio Kiowa kam 1987 als Vertragsarbeiter in die DDR und arbeitet im SVKE - Schlacht- und Verarbeitungskominat Eberswalde. In der Nacht vom 24. November 1990 wird Amadeu Antonio von Neonazis in Eberswalde überfallen und verstirbt am 6. Dezember. Er war eines der ersten Todesopfer rassistischer Gewalt im wiedervereinigten Deutschland.",
                 prevLink: "intrvw_mm02.html",
