--- a/src/html/about.html
+++ b/src/html/about.html
@@ -78,7 +78,7 @@
                             </a>
                         </div>
                         <!-- Dokumentationszentrum -->
-                        <div class="mt-4 w-full">
+                        <div class="my-4 w-full">
                             <a
                                 href="https://soziale-bildung.org/ueber_uns/politische-bildung/dokumentationszentrum-lichtenhagen-im-gedaechtnis/"
                                 target="_blank"
@@ -86,6 +86,16 @@
                                 <img class="mx-auto w-1/2" src="/public/images/dokzentrum-logo.jpg" />
                             </a>
                         </div>
+
+                            <div class="my-8 text-sm w-full" data-lang-key="about-8">
+                                Brotherland ist das Werk von Martina Zaninelli und Thomas Jakobs, und beinhaltet auch Bilder aus externen Quellen. Es wurde alles getan um Copyright zu respektieren, und gleichzeitig den künstlerischen Aspekt des Projektes zu wahren.
+                                <br/>
+                                Wir orientierten uns diesbezüglich an der 'Fair Use' Rechtsnorm bei Illustrationen und Zitaten. Bitte kontaktieren Sie uns, falls Sie doch der Ansicht sind, dass ein Fehler oder eine Verletzung des Urheberrechts vorliegen.
+                            </div>
+                    </div>
+
+                
+
                     </div>
                 </div>
             </div>
