temp qrcode page

--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,8 @@
                 </nav>
             </div>
         </div>
+        <!-- Need to link this for parcel to include it: -->
+        <a href="./html/qrcode.html"></a>
     </body>
 </html>
 
