--- a/src/html/qrcode.html
+++ b/src/html/qrcode.html
@@ -13,15 +13,24 @@
             <!-- 1. -->
             <div class="mb-10 flex flex-col items-center justify-between md:flex-row">
                 <div class="w-full text-left md:w-1/2 md:pr-4 lg:pr-8">
-                    <p>Brotherland is a visual research project about nationalism, racism, violence, and broken dreams.</p>
+                    <p>Brotherland is a visual research project about nationalism, racism, violence and broken dreams.</p>
                     <p>
-                        The project focuses on the experiences of former contract workers, Vertragsarbeiter, from their arrival in the GDR
-                        until the 1990s.
+                        The focus of the project is on the experiences of former contract – Vertragsarbeiter – workers from their arrival in
+                        the GDR until the 1990s.
                     </p>
-                    <p>In den Interviews und Erzählungen der Zeitzeug:innen sind zum Teil rassistische und gewaltvolle Inhalte zu hören.</p>
+                    <p>
+                        From the beginning of the 1960s, in order to overcome the shortage of labour, the GDR entered into bilateral
+                        agreements with other states for the employment of workers. These socialist states - Angola, Algeria, Mozambique,
+                        Cuba and Vietnam - were defined as ‚brotherlands‘.
+                    </p>
+                    <p>
+                        When the Berlin Wall fell and Germany was reunited, for many it was a celebration, the achievement of freedom and
+                        the realization of something long dreamed of. For others, it was the beginning of a period that was marked by
+                        violence and fear. As is often the case, History has at least two sides.
+                    </p>
                 </div>
 
-                <div class="mb-4 w-4/5 md:mb-0 md:w-1/2 md:pl-4 lg:pl-8">
+                <div class="my-4 w-4/5 md:my-0 md:w-1/2 md:pl-4 lg:pl-8">
                     <div class="relative aspect-2/3 w-full">
                         <div class="h-full grayscale transition-[filter] ease-linear md:hover:grayscale-0">
                             <a href="virtual-exhibits/ve2.html" class="group">
@@ -40,17 +49,14 @@
             <div class="mb-10 flex flex-col items-center justify-between md:flex-row">
                 <div class="mb-4 w-fit text-left md:mb-0 md:pr-4 lg:pr-8">
                     <p>
-                        Die „Ausländer raus“-Gewalt nach der Wende begann nicht erst 1992 mit dem Pogrom in Rostock-Lichtenhagen und den
-                        Brandanschlägen 1993 in Mölln und Solingen. Bereits 1991 wurden in Hoyerswerda tagelang ein Wohnheim für
-                        Vertragsarbeiter:innen und eine Geflüchtetenunterkunft angegriffen. Zeitweise standen bis zu 500 Schaulustige vor
-                        den Heimen, aus dieser Masse heraus fanden die Angriffe statt. In Rostock-Lichtenhagen wurden das Wohnheim
-                        ehemaliger vietnamesischer Vertragsarbeiter:innen und die „Zentrale Aufnahmestelle für Asylbewerber“ angegriffen.
-                        Steine und Molotow-Cocktails flogen gegen die Gebäude und auf die Menschen in ihnen. An diesem Pogrom beteiligten
-                        sich mehrere Hundert Neonazis und bis zu 3.000 applaudierende Zuschauer:innen.
+                        The dissolution of the GDR was also the end of Vertragsarbeiter’s contracts. Most had to return to their homeland,
+                        but some could stay. What no one expected was that racism, which had already existed in the GDR but was more talked
+                        about behind closed doors, would become so visible and present.
                     </p>
                     <p>
-                        Hoyerswerda und Rostock waren, wie alle rechtsextremistischen Anschläge der 1990er-Jahre, Ausdruck rassistischer und
-                        nationalistischer Einstellungen, die später zum mörderischen Terror des sogenannten NSU führten.
+                        In November 1990, Amadeu Antonio, a former contract worker, was murdered - it is considered to be the first racist
+                        murder in the reunified Germany. Violence and racism were an everyday experience for many, but reached a new level
+                        with the events of 1991 and 1992.
                     </p>
                 </div>
             </div>
@@ -67,21 +73,21 @@
                 </div>
                 <div class="mb-4 w-fit text-left md:mb-0 md:pl-4 lg:pl-8">
                     <p>
-                        Am 9. November 1989 fällt die Berliner Mauer, ein Jahr später wird Deutschland wiedervereinigt. Für viele ein Fest,
-                        die Errungenschaft der Freiheit, die Verwirklichung von etwas lang Erträumtem. Für andere der Beginn einer Zeit,
-                        geprägt von Gewalt und Angst. Wie so oft hat die Geschichte mindestens zwei Seiten.
+                        In 1991, a dormitory for contract workers in Hoyerswerda, Saxony, was attacked for days. Up to 500 onlookers stood
+                        in front of the dormitories. It was from this crowd - a crowd of ordinary people, not just neo-Nazis - that the
+                        attacks took place. In Rostock-Lichtenhagen in 1992, the home of former Vietnamese contract workers and the central
+                        reception centre for asylum applicants were attacked for five consecutive days. Rocks and firebombs were thrown at
+                        the buildings and the people inside. Up to 3,000 applauding spectators took part in the pogrom.
                     </p>
-                    <p>
-                        Eberswalde, 24. November 1990: Der ehemalige Vertragsarbeiter Amadeu Antonio Kiowa wird von Neonazis überfallen, er
-                        stirbt an den Verletzungen am 6. Dezember. Er war eines der ersten Todesopfer rassistischer Gewalt im eben erst
-                        wiedervereinigten Deutschland. Amadeu Antonio war 1987 als Vertragsarbeiter aus Angola in die DDR gekommen.
-                    </p>
-                    <p>
-                        Um den Mangel an Arbeitskräften zu beheben, schloss die DDR ab Anfang der 1960er-Jahre bilaterale Verträge mit
-                        anderen Staaten zur Ausbildung und Beschäftigung von Arbeiter:innen ab. Diese sozialistischen Herkunftsländer wurden
-                        als Bruderländer bezeichnet. Die ersten Vertragsarbeiter:innen kamen aus Polen und Ungarn, später auch aus Algerien,
-                        Angola, Kuba, Mosambik und Vietnam.
-                    </p>
+                </div>
+            </div>
+
+            <!-- 4. -->
+            <div class="mb-10 flex flex-col items-center justify-between md:flex-row">
+                <div class="mb-4 w-fit text-left md:mb-0 md:pr-4 lg:pr-8">
+                    <p class="font-bold underline">Brotherland</p>
+                    <p>Exhibition opening 14th February 2025 - 7pm</p>
+                    <p>La CAVe - Cantiere delle Arti Visive<br />Largo Giovanni Battista Marzi, 1 - Roma</p>
                 </div>
             </div>
 
@@ -90,7 +96,7 @@
                     <div
                         class="flex h-32 w-32 items-center justify-center rounded-full bg-gray-950 p-4 pt-3 text-center font-crimson-text leading-tight tracking-tight text-gray-200 hover:!text-white"
                     >
-                        zur virtuellen Ausstellung
+                        see more of the project
                     </div>
                 </a>
             </div>
