moved dates to top

--- a/src/html/qrcode.html
+++ b/src/html/qrcode.html
@@ -11,6 +11,17 @@
 
         <main class="mb-24 flex flex-col items-center justify-start font-crimson-text text-lg font-semibold tracking-tight">
             <!-- 1. -->
+            <div class="mb-10 flex flex-col items-center justify-between self-start md:flex-row">
+                <div class="mb-4 w-fit text-left md:mb-0 md:pr-4 lg:pr-8">
+                    <p class="font-bold underline">Brotherland</p>
+                    <p>Exhibition opening 14th February 2025 - 7pm</p>
+                    <p>La CAVe - Cantiere delle Arti Visive<br />Largo Giovanni Battista Marzi, 1 - Roma</p>
+                    <p>Exhibition from 14th February until 28th February 2025</p>
+                    <p>Opening hours:<br />Monday - Friday: 3pm - 8pm</p>
+                </div>
+            </div>
+
+            <!-- 2. -->
             <div class="mb-10 flex flex-col items-center justify-between md:flex-row">
                 <div class="w-full text-left md:w-1/2 md:pr-4 lg:pr-8">
                     <p>Brotherland is a visual research project about nationalism, racism, violence and broken dreams.</p>
@@ -45,7 +56,7 @@
                 </div>
             </div>
 
-            <!-- 2. -->
+            <!-- 3. -->
             <div class="mb-10 flex flex-col items-center justify-between md:flex-row">
                 <div class="mb-4 w-fit text-left md:mb-0 md:pr-4 lg:pr-8">
                     <p>
@@ -61,7 +72,7 @@
                 </div>
             </div>
 
-            <!-- 3. -->
+            <!-- 4. -->
             <div class="mb-10 flex flex-col-reverse items-center justify-between md:flex-row">
                 <div class="mb-4 w-4/5 md:mb-0 md:pr-4 lg:pr-8">
                     <!-- Image placeholders: Zaninelli_Jakobs_BROTHERLAND_04.jpg -->
@@ -79,15 +90,6 @@
                         reception centre for asylum applicants were attacked for five consecutive days. Rocks and firebombs were thrown at
                         the buildings and the people inside. Up to 3,000 applauding spectators took part in the pogrom.
                     </p>
-                </div>
-            </div>
-
-            <!-- 4. -->
-            <div class="mb-10 flex flex-col items-center justify-between md:flex-row">
-                <div class="mb-4 w-fit text-left md:mb-0 md:pr-4 lg:pr-8">
-                    <p class="font-bold underline">Brotherland</p>
-                    <p>Exhibition opening 14th February 2025 - 7pm</p>
-                    <p>La CAVe - Cantiere delle Arti Visive<br />Largo Giovanni Battista Marzi, 1 - Roma</p>
                 </div>
             </div>
 
