--- a/src/html/exhibits.html
+++ b/src/html/exhibits.html
@@ -14,6 +14,60 @@
                 id="simplelightboxgallery"
                 class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-4 xl:grid-cols-5 2xl:grid-cols-6 [&>*]:my-auto"
             >
+                <a href="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_029.jpg"
+                    ><img
+                        src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_029.jpg?width=400"
+                        title="Brotherland - La CAVe - cantiere delle arti visive - Rome, Italy"
+                        class="w-full cursor-pointer"
+                /></a>
+                <a href="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_030.jpg"
+                    ><img
+                        src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_030.jpg?width=400"
+                        title="Brotherland - La CAVe - cantiere delle arti visive - Rome, Italy"
+                        class="w-full cursor-pointer"
+                /></a>
+                <a href="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_031.jpg"
+                    ><img
+                        src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_031.jpg?width=400"
+                        title="Brotherland - La CAVe - cantiere delle arti visive - Rome, Italy"
+                        class="w-full cursor-pointer"
+                /></a>
+                <a href="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_032.jpg"
+                    ><img
+                        src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_032.jpg?width=400"
+                        title="Brotherland - La CAVe - cantiere delle arti visive - Rome, Italy"
+                        class="w-full cursor-pointer"
+                /></a>
+                <a href="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_033.jpg"
+                    ><img
+                        src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_033.jpg?width=400"
+                        title="Brotherland - La CAVe - cantiere delle arti visive - Rome, Italy"
+                        class="w-full cursor-pointer"
+                /></a>
+                <a href="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_034.jpg"
+                    ><img
+                        src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_034.jpg?width=400"
+                        title="Brotherland - La CAVe - cantiere delle arti visive - Rome, Italy"
+                        class="w-full cursor-pointer"
+                /></a>
+                <a href="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_035.jpg"
+                    ><img
+                        src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_035.jpg?width=400"
+                        title="Brotherland - La CAVe - cantiere delle arti visive - Rome, Italy"
+                        class="w-full cursor-pointer"
+                /></a>
+                <a href="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_036.jpg"
+                    ><img
+                        src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_036.jpg?width=400"
+                        title="Brotherland - La CAVe - cantiere delle arti visive - Rome, Italy"
+                        class="w-full cursor-pointer"
+                /></a>
+                <a href="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_037.jpg"
+                    ><img
+                        src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_037.jpg?width=400"
+                        title="Brotherland - La CAVe - cantiere delle arti visive - Rome, Italy"
+                        class="w-full cursor-pointer"
+                /></a>
                 <a href="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_01.jpg"
                     ><img
                         src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_01.jpg?width=400"
