--- a/src/html/about.html
+++ b/src/html/about.html
@@ -20,7 +20,9 @@
 
                     <p data-lang-key="about-2" class="text-left text-red-800 underline">Ausstellungen und Nominierungen</p>
                     <div class="h-4"></div>
-
+                    <div>2025 - Solo-exhibition, La CAVe - Rome, Italy</div>
+                    <div>2024 - Longlisted, Format Festival - Derby, UK</div>
+                    <div>2024 - Shortlisted, Athens Photofestival - Athens, GR</div>
                     <div>2023 – Photomatch, Fotofestiwal – Lodz, PL</div>
                     <div>2022 – Longlisted, Format Festival – Derby, UK</div>
                     <div>
@@ -46,14 +48,15 @@
 
                     <p data-lang-key="about-4" class="text-left text-red-800 underline">Biografien</p>
                     <p data-lang-key="about-5">
-                        Martina macht die Fotos, Thomas stellt die Fragen. Gemeinsam haben sie Brotherland konzipiert und arbeiten seit über
-                        zwei Jahren daran. Martina ist in Italien geboren und aufgewachsen. Thomas ist in einem Staat geboren und
-                        aufgewachsen, den es nicht mehr gibt, der DDR. Beide leben jetzt in Berlin. Martina hat einen BA in Moderner und
-                        Zeitgenössischer Geschichte und besuchte Lisa Barnards Masterclass an der ISSP. Thomas hat als Straßenpädagoge und
-                        Erzieher gearbeitet. Jetzt arbeiten beide - im Berliner Nachtleben - als Türsteher. Ihr Projekt Brotherland wurde
-                        bei Castelnuovo Fotografia (Italien), Les Boutographies (Frankreich) und Fusion Festival ausgestellt, kam auf die
-                        Longlist für das Format Festival und wurde in verschiedenen Städten in Deutschland wie Rostock, Dresden und Berlin
-                        ausgestellt.
+                        Martina macht die Fotos, Thomas stellt die Fragen. Gemeinsam haben sie Brotherland konzipiert und haben mehrere
+                        Jahre an Brotherland zusammen gearbeitet. Martina ist in Italien geboren und aufgewachsen. Thomas ist in einem Staat
+                        geboren und aufgewachsen, den es nicht mehr gibt, der DDR. Beide leben jetzt in Berlin. Thomas hat als
+                        Erlebnispädagoge und Erzieher gearbeitet. Martina hat einen BA in Geschichte, besuchte Lisa Barnards Masterclass in
+                        Fotografie und hat international ihre Fotoarbeiten ausgestellt. Jetzt arbeiten beide - im Berliner Nachtleben - als
+                        Türsteher:in. Ihr Projekt Brotherland wurde bei Castelnuovo Fotografia (Italien), Les Boutographies und Hors le Murs
+                        (Frankreich) und Fusion Festival ausgestellt, es wurde für Photo-Match in Łodz ausgewählt, kam auf die Longlist für
+                        das Format Festival und Athens Photo Festival und wurde in verschiedenen Städten in Deutschland wie Rostock, Dresden
+                        und Berlin ausgestellt.
                     </p>
                 </div>
 
@@ -87,15 +90,15 @@
                             </a>
                         </div>
 
-                            <div class="my-8 text-sm w-full" data-lang-key="about-8">
-                                Brotherland ist das Werk von Martina Zaninelli und Thomas Jakobs, und beinhaltet auch Bilder aus externen Quellen. Es wurde alles getan um Copyright zu respektieren, und gleichzeitig den künstlerischen Aspekt des Projektes zu wahren.
-                                <br/>
-                                Wir orientierten uns diesbezüglich an der 'Fair Use' Rechtsnorm bei Illustrationen und Zitaten. Bitte kontaktieren Sie uns, falls Sie doch der Ansicht sind, dass ein Fehler oder eine Verletzung des Urheberrechts vorliegen.
-                            </div>
-                    </div>
-
-                
-
+                        <div class="my-8 w-full text-sm" data-lang-key="about-8">
+                            Brotherland ist das Werk von Martina Zaninelli und Thomas Jakobs, und beinhaltet auch Bilder aus externen
+                            Quellen. Es wurde alles getan um Copyright zu respektieren, und gleichzeitig den künstlerischen Aspekt des
+                            Projektes zu wahren.
+                            <br />
+                            Wir orientierten uns diesbezüglich an der 'Fair Use' Rechtsnorm bei Illustrationen und Zitaten. Bitte
+                            kontaktieren Sie uns, falls Sie doch der Ansicht sind, dass ein Fehler oder eine Verletzung des Urheberrechts
+                            vorliegen.
+                        </div>
                     </div>
                 </div>
             </div>
